@@ -9,7 +9,6 @@
 package org.elasticsearch.action.search;
 
 import org.apache.logging.log4j.Logger;
-import org.apache.logging.log4j.message.ParameterizedMessage;
 import org.apache.lucene.util.CollectionUtil;
 import org.apache.lucene.util.FixedBitSet;
 import org.elasticsearch.Version;
@@ -25,8 +24,6 @@ import org.elasticsearch.search.SearchService;
 import org.elasticsearch.search.SearchShardTarget;
 import org.elasticsearch.search.builder.SearchSourceBuilder;
 import org.elasticsearch.search.internal.AliasFilter;
-import org.elasticsearch.search.internal.InternalSearchResponse;
-import org.elasticsearch.search.internal.SearchContext;
 import org.elasticsearch.search.internal.ShardSearchRequest;
 import org.elasticsearch.search.sort.FieldSortBuilder;
 import org.elasticsearch.search.sort.MinAndMax;
@@ -45,11 +42,11 @@ import java.util.Objects;
 import java.util.concurrent.Executor;
 import java.util.concurrent.atomic.AtomicReferenceArray;
 import java.util.function.BiFunction;
-import java.util.function.Function;
 import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 import java.util.stream.Stream;
 
+import static org.elasticsearch.core.Strings.format;
 import static org.elasticsearch.core.Types.forciblyCast;
 
 /**
@@ -68,8 +65,7 @@ final class CanMatchPreFilterSearchPhase extends SearchPhase {
     private final Logger logger;
     private final SearchRequest request;
     private final GroupShardsIterator<SearchShardIterator> shardsIts;
-    private final ActionListener<SearchResponse> listener;
-    private final SearchResponse.Clusters clusters;
+    private final ActionListener<GroupShardsIterator<SearchShardIterator>> listener;
     private final TransportSearchAction.SearchTimeProvider timeProvider;
     private final BiFunction<String, String, Transport.Connection> nodeIdToConnection;
     private final SearchTransportService searchTransportService;
@@ -77,7 +73,6 @@ final class CanMatchPreFilterSearchPhase extends SearchPhase {
     private final Map<String, Float> concreteIndexBoosts;
     private final Map<String, AliasFilter> aliasFilter;
     private final SearchTask task;
-    private final Function<GroupShardsIterator<SearchShardIterator>, SearchPhase> phaseFactory;
     private final Executor executor;
 
     private final CanMatchSearchPhaseResults results;
@@ -91,13 +86,11 @@ final class CanMatchPreFilterSearchPhase extends SearchPhase {
         Map<String, Float> concreteIndexBoosts,
         Executor executor,
         SearchRequest request,
-        ActionListener<SearchResponse> listener,
         GroupShardsIterator<SearchShardIterator> shardsIts,
         TransportSearchAction.SearchTimeProvider timeProvider,
         SearchTask task,
-        Function<GroupShardsIterator<SearchShardIterator>, SearchPhase> phaseFactory,
-        SearchResponse.Clusters clusters,
-        CoordinatorRewriteContextProvider coordinatorRewriteContextProvider
+        CoordinatorRewriteContextProvider coordinatorRewriteContextProvider,
+        ActionListener<GroupShardsIterator<SearchShardIterator>> listener
     ) {
         super("can_match");
         this.logger = logger;
@@ -106,12 +99,10 @@ final class CanMatchPreFilterSearchPhase extends SearchPhase {
         this.request = request;
         this.listener = listener;
         this.shardsIts = shardsIts;
-        this.clusters = clusters;
         this.timeProvider = timeProvider;
         this.concreteIndexBoosts = concreteIndexBoosts;
         this.aliasFilter = aliasFilter;
         this.task = task;
-        this.phaseFactory = phaseFactory;
         this.coordinatorRewriteContextProvider = coordinatorRewriteContextProvider;
         this.executor = executor;
         this.shardItIndexMap = new HashMap<>();
@@ -129,9 +120,7 @@ final class CanMatchPreFilterSearchPhase extends SearchPhase {
     }
 
     private static boolean assertSearchCoordinationThread() {
-        assert Thread.currentThread().getName().contains(ThreadPool.Names.SEARCH_COORDINATION)
-            : "not called from the right thread " + Thread.currentThread().getName();
-        return true;
+        return ThreadPool.assertCurrentThreadPool(ThreadPool.Names.SEARCH_COORDINATION);
     }
 
     @Override
@@ -147,7 +136,6 @@ final class CanMatchPreFilterSearchPhase extends SearchPhase {
                 );
             }
         }
-
         runCoordinatorRewritePhase();
     }
 
@@ -162,7 +150,7 @@ final class CanMatchPreFilterSearchPhase extends SearchPhase {
                 searchShardIterator.getOriginalIndices().indicesOptions(),
                 Collections.emptyList(),
                 getNumShards(),
-                timeProvider.getAbsoluteStartMillis(),
+                timeProvider.absoluteStartMillis(),
                 searchShardIterator.getClusterAlias()
             );
             final ShardSearchRequest request = canMatchNodeRequest.createShardSearchRequest(buildShardLevelRequest(searchShardIterator));
@@ -185,11 +173,10 @@ final class CanMatchPreFilterSearchPhase extends SearchPhase {
                 results.consumeResult(result, () -> {});
             }
         }
-
-        if (matchedShardLevelRequests.isEmpty() == false) {
-            new Round(new GroupShardsIterator<>(matchedShardLevelRequests)).run();
-        } else {
+        if (matchedShardLevelRequests.isEmpty()) {
             finishPhase();
+        } else {
+            new Round(new GroupShardsIterator<>(matchedShardLevelRequests)).run();
         }
     }
 
@@ -344,36 +331,13 @@ final class CanMatchPreFilterSearchPhase extends SearchPhase {
         @Override
         public void onFailure(Exception e) {
             if (logger.isDebugEnabled()) {
-                logger.debug(new ParameterizedMessage("Failed to execute [{}] while running [{}] phase", request, getName()), e);
+                logger.debug(() -> format("Failed to execute [%s] while running [%s] phase", request, getName()), e);
             }
             onPhaseFailure("round", e);
         }
     }
 
-    private static class SendingTarget {
-        @Nullable
-        private final String clusterAlias;
-        @Nullable
-        private final String nodeId;
-
-        SendingTarget(@Nullable String clusterAlias, @Nullable String nodeId) {
-            this.clusterAlias = clusterAlias;
-            this.nodeId = nodeId;
-        }
-
-        @Override
-        public boolean equals(Object o) {
-            if (this == o) return true;
-            if (o == null || getClass() != o.getClass()) return false;
-            SendingTarget that = (SendingTarget) o;
-            return Objects.equals(clusterAlias, that.clusterAlias) && Objects.equals(nodeId, that.nodeId);
-        }
-
-        @Override
-        public int hashCode() {
-            return Objects.hash(clusterAlias, nodeId);
-        }
-    }
+    private record SendingTarget(@Nullable String clusterAlias, @Nullable String nodeId) {}
 
     private CanMatchNodeRequest createCanMatchRequest(Map.Entry<SendingTarget, List<SearchShardIterator>> entry) {
         final SearchShardIterator first = entry.getValue().get(0);
@@ -391,20 +355,13 @@ final class CanMatchPreFilterSearchPhase extends SearchPhase {
             first.getOriginalIndices().indicesOptions(),
             shardLevelRequests,
             getNumShards(),
-            timeProvider.getAbsoluteStartMillis(),
+            timeProvider.absoluteStartMillis(),
             first.getClusterAlias()
         );
     }
 
     private void finishPhase() {
-        try {
-            phaseFactory.apply(getIterator(results, shardsIts)).start();
-        } catch (Exception e) {
-            if (logger.isDebugEnabled()) {
-                logger.debug(new ParameterizedMessage("Failed to execute [{}] while running [{}] phase", request, getName()), e);
-            }
-            onPhaseFailure("finish", e);
-        }
+        listener.onResponse(getIterator(results, shardsIts));
     }
 
     private static final float DEFAULT_INDEX_BOOST = 1.0f;
@@ -444,35 +401,15 @@ final class CanMatchPreFilterSearchPhase extends SearchPhase {
     @Override
     public void start() {
         if (getNumShards() == 0) {
-            // no search shards to search on, bail with empty response
-            // (it happens with search across _all with no indices around and consistent with broadcast operations)
-            int trackTotalHitsUpTo = request.source() == null ? SearchContext.DEFAULT_TRACK_TOTAL_HITS_UP_TO
-                : request.source().trackTotalHitsUpTo() == null ? SearchContext.DEFAULT_TRACK_TOTAL_HITS_UP_TO
-                : request.source().trackTotalHitsUpTo();
-            // total hits is null in the response if the tracking of total hits is disabled
-            boolean withTotalHits = trackTotalHitsUpTo != SearchContext.TRACK_TOTAL_HITS_DISABLED;
-            listener.onResponse(
-                new SearchResponse(
-                    InternalSearchResponse.empty(withTotalHits),
-                    null,
-                    0,
-                    0,
-                    0,
-                    timeProvider.buildTookInMillis(),
-                    ShardSearchFailure.EMPTY_ARRAY,
-                    clusters,
-                    null
-                )
-            );
+            finishPhase();
             return;
         }
-
         // Note that the search is failed when this task is rejected by the executor
         executor.execute(new AbstractRunnable() {
             @Override
             public void onFailure(Exception e) {
                 if (logger.isDebugEnabled()) {
-                    logger.debug(new ParameterizedMessage("Failed to execute [{}] while running [{}] phase", request, getName()), e);
+                    logger.debug(() -> format("Failed to execute [%s] while running [%s] phase", request, getName()), e);
                 }
                 onPhaseFailure("start", e);
             }
@@ -600,7 +537,7 @@ final class CanMatchPreFilterSearchPhase extends SearchPhase {
             .boxed()
             .sorted(shardComparator(shardsIts, minAndMaxes, order))
             .map(shardsIts::get)
-            .collect(Collectors.toList());
+            .toList();
     }
 
     private static boolean shouldSortShards(MinAndMax<?>[] minAndMaxes) {
