@@ -17,7 +17,7 @@ import org.elasticsearch.action.admin.cluster.shards.ClusterSearchShardsResponse
 import org.elasticsearch.action.support.ActionFilters;
 import org.elasticsearch.action.support.HandledTransportAction;
 import org.elasticsearch.action.support.IndicesOptions;
-import org.elasticsearch.client.Client;
+import org.elasticsearch.client.internal.Client;
 import org.elasticsearch.cluster.ClusterState;
 import org.elasticsearch.cluster.block.ClusterBlockException;
 import org.elasticsearch.cluster.block.ClusterBlockLevel;
@@ -40,19 +40,19 @@ import org.elasticsearch.common.logging.DeprecationCategory;
 import org.elasticsearch.common.logging.DeprecationLogger;
 import org.elasticsearch.common.settings.Setting;
 import org.elasticsearch.common.settings.Setting.Property;
-import org.elasticsearch.common.util.concurrent.AtomicArray;
+import org.elasticsearch.common.util.Maps;
 import org.elasticsearch.common.util.concurrent.CountDown;
 import org.elasticsearch.core.Nullable;
 import org.elasticsearch.core.TimeValue;
 import org.elasticsearch.index.Index;
+import org.elasticsearch.index.IndexNotFoundException;
 import org.elasticsearch.index.query.Rewriteable;
 import org.elasticsearch.index.shard.ShardId;
+import org.elasticsearch.index.shard.ShardNotFoundException;
 import org.elasticsearch.indices.ExecutorSelector;
 import org.elasticsearch.indices.breaker.CircuitBreakerService;
-import org.elasticsearch.search.SearchPhaseResult;
 import org.elasticsearch.search.SearchService;
-import org.elasticsearch.search.SearchShardTarget;
-import org.elasticsearch.search.aggregations.InternalAggregation;
+import org.elasticsearch.search.aggregations.AggregationReduceContext;
 import org.elasticsearch.search.aggregations.InternalAggregations;
 import org.elasticsearch.search.builder.SearchSourceBuilder;
 import org.elasticsearch.search.internal.AliasFilter;
@@ -92,6 +92,7 @@ import java.util.stream.StreamSupport;
 
 import static org.elasticsearch.action.search.SearchType.DFS_QUERY_THEN_FETCH;
 import static org.elasticsearch.action.search.SearchType.QUERY_THEN_FETCH;
+import static org.elasticsearch.action.search.TransportSearchHelper.checkCCSVersionCompatibility;
 import static org.elasticsearch.search.sort.FieldSortBuilder.hasPrimaryFieldSort;
 import static org.elasticsearch.threadpool.ThreadPool.Names.SYSTEM_CRITICAL_READ;
 import static org.elasticsearch.threadpool.ThreadPool.Names.SYSTEM_READ;
@@ -129,6 +130,7 @@ public class TransportSearchAction extends HandledTransportAction<SearchRequest,
     private final CircuitBreaker circuitBreaker;
     private final ExecutorSelector executorSelector;
     private final int defaultPreFilterShardSize;
+    private final boolean ccsCheckCompatibility;
 
     @Inject
     public TransportSearchAction(
@@ -157,6 +159,7 @@ public class TransportSearchAction extends HandledTransportAction<SearchRequest,
         this.namedWriteableRegistry = namedWriteableRegistry;
         this.executorSelector = executorSelector;
         this.defaultPreFilterShardSize = DEFAULT_PRE_FILTER_SHARD_SIZE.get(clusterService.getSettings());
+        this.ccsCheckCompatibility = SearchService.CCS_VERSION_CHECK_SETTING.get(clusterService.getSettings());
     }
 
     private Map<String, OriginalIndices> buildPerIndexOriginalIndices(
@@ -246,11 +249,7 @@ public class TransportSearchAction extends HandledTransportAction<SearchRequest,
      * to moving backwards due to NTP and other such complexities, etc.). There are also issues with
      * using a relative clock for reporting real time. Thus, we simply separate these two uses.
      */
-    static final class SearchTimeProvider {
-
-        private final long absoluteStartMillis;
-        private final long relativeStartNanos;
-        private final LongSupplier relativeCurrentNanosProvider;
+    record SearchTimeProvider(long absoluteStartMillis, long relativeStartNanos, LongSupplier relativeCurrentNanosProvider) {
 
         /**
          * Instantiates a new search time provider. The absolute start time is the real clock time
@@ -259,19 +258,11 @@ public class TransportSearchAction extends HandledTransportAction<SearchRequest,
          * operation took can be measured against the provided relative clock and the relative start
          * time.
          *
-         * @param absoluteStartMillis the absolute start time in milliseconds since the epoch
-         * @param relativeStartNanos the relative start time in nanoseconds
+         * @param absoluteStartMillis          the absolute start time in milliseconds since the epoch
+         * @param relativeStartNanos           the relative start time in nanoseconds
          * @param relativeCurrentNanosProvider provides the current relative time
          */
-        SearchTimeProvider(final long absoluteStartMillis, final long relativeStartNanos, final LongSupplier relativeCurrentNanosProvider) {
-            this.absoluteStartMillis = absoluteStartMillis;
-            this.relativeStartNanos = relativeStartNanos;
-            this.relativeCurrentNanosProvider = relativeCurrentNanosProvider;
-        }
-
-        long getAbsoluteStartMillis() {
-            return absoluteStartMillis;
-        }
+        SearchTimeProvider {}
 
         long buildTookInMillis() {
             return TimeUnit.NANOSECONDS.toMillis(relativeCurrentNanosProvider.getAsLong() - relativeStartNanos);
@@ -280,96 +271,14 @@ public class TransportSearchAction extends HandledTransportAction<SearchRequest,
 
     @Override
     protected void doExecute(Task task, SearchRequest searchRequest, ActionListener<SearchResponse> listener) {
-        executeRequest((SearchTask) task, searchRequest, this::searchAsyncAction, listener);
+        executeRequest((SearchTask) task, searchRequest, listener, AsyncSearchActionProvider::new);
     }
 
-    public interface SinglePhaseSearchAction {
-        void executeOnShardTarget(
-            SearchTask searchTask,
-            SearchShardIterator shardIt,
-            Transport.Connection connection,
-            ActionListener<SearchPhaseResult> listener
-        );
-    }
-
-    public void executeRequest(
-        SearchTask task,
-        SearchRequest searchRequest,
-        String actionName,
-        boolean includeSearchContext,
-        SinglePhaseSearchAction phaseSearchAction,
-        ActionListener<SearchResponse> listener
-    ) {
-        executeRequest(task, searchRequest, new SearchAsyncActionProvider() {
-            @Override
-            public AbstractSearchAsyncAction<? extends SearchPhaseResult> asyncSearchAction(
-                SearchTask task,
-                SearchRequest searchRequest,
-                Executor executor,
-                GroupShardsIterator<SearchShardIterator> shardsIts,
-                SearchTimeProvider timeProvider,
-                BiFunction<String, String, Transport.Connection> connectionLookup,
-                ClusterState clusterState,
-                Map<String, AliasFilter> aliasFilter,
-                Map<String, Float> concreteIndexBoosts,
-                ActionListener<SearchResponse> listener,
-                boolean preFilter,
-                ThreadPool threadPool,
-                SearchResponse.Clusters clusters
-            ) {
-                return new AbstractSearchAsyncAction<>(
-                    actionName,
-                    logger,
-                    searchTransportService,
-                    connectionLookup,
-                    aliasFilter,
-                    concreteIndexBoosts,
-                    executor,
-                    searchRequest,
-                    listener,
-                    shardsIts,
-                    timeProvider,
-                    clusterState,
-                    task,
-                    new ArraySearchPhaseResults<>(shardsIts.size()),
-                    1,
-                    clusters
-                ) {
-                    @Override
-                    protected void executePhaseOnShard(
-                        SearchShardIterator shardIt,
-                        SearchShardTarget shard,
-                        SearchActionListener<SearchPhaseResult> listener
-                    ) {
-                        final Transport.Connection connection = getConnection(shard.getClusterAlias(), shard.getNodeId());
-                        phaseSearchAction.executeOnShardTarget(task, shardIt, connection, listener);
-                    }
-
-                    @Override
-                    protected SearchPhase getNextPhase(SearchPhaseResults<SearchPhaseResult> results, SearchPhaseContext context) {
-                        return new SearchPhase(getName()) {
-                            @Override
-                            public void run() {
-                                final AtomicArray<SearchPhaseResult> atomicArray = results.getAtomicArray();
-                                sendSearchResponse(InternalSearchResponse.empty(), atomicArray);
-                            }
-                        };
-                    }
-
-                    @Override
-                    boolean buildPointInTimeFromSearchResults() {
-                        return includeSearchContext;
-                    }
-                };
-            }
-        }, listener);
-    }
-
-    private void executeRequest(
+    void executeRequest(
         SearchTask task,
         SearchRequest original,
-        SearchAsyncActionProvider searchAsyncActionProvider,
-        ActionListener<SearchResponse> listener
+        ActionListener<SearchResponse> listener,
+        Function<ActionListener<SearchResponse>, SearchPhaseProvider> searchPhaseProvider
     ) {
         final long relativeStartNanos = System.nanoTime();
         final SearchTimeProvider timeProvider = new SearchTimeProvider(
@@ -380,6 +289,9 @@ public class TransportSearchAction extends HandledTransportAction<SearchRequest,
         ActionListener<SearchRequest> rewriteListener = ActionListener.wrap(rewritten -> {
             final SearchContextId searchContext;
             final Map<String, OriginalIndices> remoteClusterIndices;
+            if (ccsCheckCompatibility) {
+                checkCCSVersionCompatibility(rewritten);
+            }
             if (rewritten.pointInTimeBuilder() != null) {
                 searchContext = rewritten.pointInTimeBuilder().getSearchContextId(namedWriteableRegistry);
                 remoteClusterIndices = getIndicesFromSearchContexts(searchContext, rewritten.indicesOptions());
@@ -396,13 +308,12 @@ public class TransportSearchAction extends HandledTransportAction<SearchRequest,
                     rewritten,
                     localIndices,
                     clusterState,
-                    listener,
                     searchContext,
-                    searchAsyncActionProvider
+                    searchPhaseProvider.apply(listener)
                 );
             } else {
                 if (shouldMinimizeRoundtrips(rewritten)) {
-                    final TaskId parentTaskId = task.taskInfo(clusterService.localNode().getId(), false).getTaskId();
+                    final TaskId parentTaskId = task.taskInfo(clusterService.localNode().getId(), false).taskId();
                     ccsRemoteReduce(
                         parentTaskId,
                         rewritten,
@@ -419,9 +330,8 @@ public class TransportSearchAction extends HandledTransportAction<SearchRequest,
                             r,
                             localIndices,
                             clusterState,
-                            l,
                             searchContext,
-                            searchAsyncActionProvider
+                            searchPhaseProvider.apply(l)
                         )
                     );
                 } else {
@@ -468,17 +378,35 @@ public class TransportSearchAction extends HandledTransportAction<SearchRequest,
                                 clusterNodeLookup,
                                 clusterState,
                                 remoteAliasFilters,
-                                listener,
                                 new SearchResponse.Clusters(totalClusters, successfulClusters, skippedClusters.get()),
                                 searchContext,
-                                searchAsyncActionProvider
+                                searchPhaseProvider.apply(listener)
                             );
                         }, listener::onFailure)
                     );
                 }
             }
         }, listener::onFailure);
-        Rewriteable.rewriteAndFetch(original, searchService.getRewriteContext(timeProvider::getAbsoluteStartMillis), rewriteListener);
+        Rewriteable.rewriteAndFetch(original, searchService.getRewriteContext(timeProvider::absoluteStartMillis), rewriteListener);
+    }
+
+    static void adjustSearchType(SearchRequest searchRequest, boolean singleShard) {
+        // optimize search type for cases where there is only one shard group to search on
+        if (singleShard) {
+            // if we only have one group, then we always want Q_T_F, no need for DFS, and no need to do THEN since we hit one shard
+            searchRequest.searchType(QUERY_THEN_FETCH);
+        }
+
+        // if there's only suggest, disable request cache and always use QUERY_THEN_FETCH
+        if (searchRequest.isSuggestOnly()) {
+            searchRequest.requestCache(false);
+            searchRequest.searchType(QUERY_THEN_FETCH);
+        }
+
+        // if there's a kNN search, always use DFS_QUERY_THEN_FETCH
+        if (searchRequest.hasKnnSearch()) {
+            searchRequest.searchType(DFS_QUERY_THEN_FETCH);
+        }
     }
 
     static boolean shouldMinimizeRoundtrips(SearchRequest searchRequest) {
@@ -494,6 +422,9 @@ public class TransportSearchAction extends HandledTransportAction<SearchRequest,
         if (searchRequest.searchType() == DFS_QUERY_THEN_FETCH) {
             return false;
         }
+        if (searchRequest.hasKnnSearch()) {
+            return false;
+        }
         SearchSourceBuilder source = searchRequest.source();
         return source == null
             || source.collapse() == null
@@ -507,7 +438,7 @@ public class TransportSearchAction extends HandledTransportAction<SearchRequest,
         OriginalIndices localIndices,
         Map<String, OriginalIndices> remoteIndices,
         SearchTimeProvider timeProvider,
-        InternalAggregation.ReduceContextBuilder aggReduceContextBuilder,
+        AggregationReduceContext.Builder aggReduceContextBuilder,
         RemoteClusterService remoteClusterService,
         ThreadPool threadPool,
         ActionListener<SearchResponse> listener,
@@ -526,7 +457,7 @@ public class TransportSearchAction extends HandledTransportAction<SearchRequest,
                 searchRequest,
                 indices.indices(),
                 clusterAlias,
-                timeProvider.getAbsoluteStartMillis(),
+                timeProvider.absoluteStartMillis(),
                 true
             );
             Client remoteClusterClient = remoteClusterService.getRemoteClusterClient(threadPool, clusterAlias);
@@ -589,7 +520,7 @@ public class TransportSearchAction extends HandledTransportAction<SearchRequest,
                     searchRequest,
                     indices.indices(),
                     clusterAlias,
-                    timeProvider.getAbsoluteStartMillis(),
+                    timeProvider.absoluteStartMillis(),
                     false
                 );
                 ActionListener<SearchResponse> ccsListener = createCCSListener(
@@ -621,7 +552,7 @@ public class TransportSearchAction extends HandledTransportAction<SearchRequest,
                     searchRequest,
                     localIndices.indices(),
                     RemoteClusterAware.LOCAL_CLUSTER_GROUP_KEY,
-                    timeProvider.getAbsoluteStartMillis(),
+                    timeProvider.absoluteStartMillis(),
                     false
                 );
                 localSearchConsumer.accept(ccsLocalSearchRequest, ccsListener);
@@ -632,7 +563,7 @@ public class TransportSearchAction extends HandledTransportAction<SearchRequest,
     static SearchResponseMerger createSearchResponseMerger(
         SearchSourceBuilder source,
         SearchTimeProvider timeProvider,
-        InternalAggregation.ReduceContextBuilder aggReduceContextBuilder
+        AggregationReduceContext.Builder aggReduceContextBuilder
     ) {
         final int from;
         final int size;
@@ -737,15 +668,14 @@ public class TransportSearchAction extends HandledTransportAction<SearchRequest,
         };
     }
 
-    private void executeLocalSearch(
+    void executeLocalSearch(
         Task task,
         SearchTimeProvider timeProvider,
         SearchRequest searchRequest,
         OriginalIndices localIndices,
         ClusterState clusterState,
-        ActionListener<SearchResponse> listener,
         SearchContextId searchContext,
-        SearchAsyncActionProvider searchAsyncActionProvider
+        SearchPhaseProvider searchPhaseProvider
     ) {
         executeSearch(
             (SearchTask) task,
@@ -756,10 +686,9 @@ public class TransportSearchAction extends HandledTransportAction<SearchRequest,
             (clusterName, nodeId) -> null,
             clusterState,
             Collections.emptyMap(),
-            listener,
             SearchResponse.Clusters.EMPTY,
             searchContext,
-            searchAsyncActionProvider
+            searchPhaseProvider
         );
     }
 
@@ -877,7 +806,7 @@ public class TransportSearchAction extends HandledTransportAction<SearchRequest,
         }
 
         List<String> frozenIndices = null;
-        Index[] indices = indexNameExpressionResolver.concreteIndices(clusterState, localIndices, timeProvider.getAbsoluteStartMillis());
+        Index[] indices = indexNameExpressionResolver.concreteIndices(clusterState, localIndices, timeProvider.absoluteStartMillis());
         for (Index index : indices) {
             IndexMetadata indexMetadata = clusterState.metadata().index(index);
             if (indexMetadata.getSettings().getAsBoolean("index.frozen", false)) {
@@ -907,13 +836,16 @@ public class TransportSearchAction extends HandledTransportAction<SearchRequest,
         BiFunction<String, String, DiscoveryNode> remoteConnections,
         ClusterState clusterState,
         Map<String, AliasFilter> remoteAliasMap,
-        ActionListener<SearchResponse> listener,
         SearchResponse.Clusters clusters,
         @Nullable SearchContextId searchContext,
-        SearchAsyncActionProvider searchAsyncActionProvider
+        SearchPhaseProvider searchPhaseProvider
     ) {
 
         clusterState.blocks().globalBlockedRaiseException(ClusterBlockLevel.READ);
+        if (searchRequest.allowPartialSearchResults() == null) {
+            // No user preference defined in search request - apply cluster service default
+            searchRequest.allowPartialSearchResults(searchService.defaultAllowPartialSearchResults());
+        }
 
         // TODO: I think startTime() should become part of ActionRequest and that should be used both for index name
         // date math expressions and $now in scripts. This way all apis will deal with now in the same way instead
@@ -931,7 +863,8 @@ public class TransportSearchAction extends HandledTransportAction<SearchRequest,
                 localIndices,
                 searchRequest.getLocalClusterAlias(),
                 searchContext,
-                searchRequest.pointInTimeBuilder().getKeepAlive()
+                searchRequest.pointInTimeBuilder().getKeepAlive(),
+                searchRequest.allowPartialSearchResults()
             );
         } else {
             final Index[] indices = resolveLocalIndices(localIndices, clusterState, timeProvider);
@@ -967,7 +900,7 @@ public class TransportSearchAction extends HandledTransportAction<SearchRequest,
                 OriginalIndices finalIndices = finalIndicesMap.get(it.shardId().getIndex().getUUID());
                 assert finalIndices != null;
                 return new SearchShardIterator(searchRequest.getLocalClusterAlias(), it.shardId(), it.getShardRoutings(), finalIndices);
-            }).collect(Collectors.toList());
+            }).toList();
         }
         final GroupShardsIterator<SearchShardIterator> shardIterators = mergeShardsIterators(localShardIterators, remoteShardIterators);
 
@@ -983,25 +916,8 @@ public class TransportSearchAction extends HandledTransportAction<SearchRequest,
 
         Map<String, Float> concreteIndexBoosts = resolveIndexBoosts(searchRequest, clusterState);
 
-        // optimize search type for cases where there is only one shard group to search on
-        if (shardIterators.size() == 1) {
-            // if we only have one group, then we always want Q_T_F, no need for DFS, and no need to do THEN since we hit one shard
-            searchRequest.searchType(QUERY_THEN_FETCH);
-        }
-        if (searchRequest.allowPartialSearchResults() == null) {
-            // No user preference defined in search request - apply cluster service default
-            searchRequest.allowPartialSearchResults(searchService.defaultAllowPartialSearchResults());
-        }
-        if (searchRequest.isSuggestOnly()) {
-            // disable request cache if we have only suggest
-            searchRequest.requestCache(false);
-            switch (searchRequest.searchType()) {
-                case DFS_QUERY_THEN_FETCH:
-                    // convert to Q_T_F if we have only suggest
-                    searchRequest.searchType(QUERY_THEN_FETCH);
-                    break;
-            }
-        }
+        adjustSearchType(searchRequest, shardIterators.size() == 1);
+
         final DiscoveryNodes nodes = clusterState.nodes();
         BiFunction<String, String, Transport.Connection> connectionLookup = buildConnectionLookup(
             searchRequest.getLocalClusterAlias(),
@@ -1017,7 +933,7 @@ public class TransportSearchAction extends HandledTransportAction<SearchRequest,
             localShardIterators.size() + remoteShardIterators.size(),
             defaultPreFilterShardSize
         );
-        searchAsyncActionProvider.asyncSearchAction(
+        searchPhaseProvider.newSearchPhase(
             task,
             searchRequest,
             asyncSearchExecutor,
@@ -1027,7 +943,6 @@ public class TransportSearchAction extends HandledTransportAction<SearchRequest,
             clusterState,
             Collections.unmodifiableMap(aliasFilter),
             concreteIndexBoosts,
-            listener,
             preFilterSearchShards,
             threadPool,
             clusters
@@ -1035,9 +950,7 @@ public class TransportSearchAction extends HandledTransportAction<SearchRequest,
     }
 
     Executor asyncSearchExecutor(final String[] indices) {
-        final List<String> executorsForIndices = Arrays.stream(indices)
-            .map(executorSelector::executorForSearch)
-            .collect(Collectors.toList());
+        final List<String> executorsForIndices = Arrays.stream(indices).map(executorSelector::executorForSearch).toList();
         if (executorsForIndices.size() == 1) { // all indices have same executor
             return threadPool.executor(executorsForIndices.get(0));
         }
@@ -1111,8 +1024,8 @@ public class TransportSearchAction extends HandledTransportAction<SearchRequest,
         return GroupShardsIterator.sortAndCreate(shards);
     }
 
-    interface SearchAsyncActionProvider {
-        SearchPhase asyncSearchAction(
+    interface SearchPhaseProvider {
+        SearchPhase newSearchPhase(
             SearchTask task,
             SearchRequest searchRequest,
             Executor executor,
@@ -1122,83 +1035,82 @@ public class TransportSearchAction extends HandledTransportAction<SearchRequest,
             ClusterState clusterState,
             Map<String, AliasFilter> aliasFilter,
             Map<String, Float> concreteIndexBoosts,
-            ActionListener<SearchResponse> listener,
             boolean preFilter,
             ThreadPool threadPool,
             SearchResponse.Clusters clusters
         );
     }
 
-    private SearchPhase searchAsyncAction(
-        SearchTask task,
-        SearchRequest searchRequest,
-        Executor executor,
-        GroupShardsIterator<SearchShardIterator> shardIterators,
-        SearchTimeProvider timeProvider,
-        BiFunction<String, String, Transport.Connection> connectionLookup,
-        ClusterState clusterState,
-        Map<String, AliasFilter> aliasFilter,
-        Map<String, Float> concreteIndexBoosts,
-        ActionListener<SearchResponse> listener,
-        boolean preFilter,
-        ThreadPool threadPool,
-        SearchResponse.Clusters clusters
-    ) {
-        if (preFilter) {
-            return new CanMatchPreFilterSearchPhase(
-                logger,
-                searchTransportService,
-                connectionLookup,
-                aliasFilter,
-                concreteIndexBoosts,
-                threadPool.executor(ThreadPool.Names.SEARCH_COORDINATION),
-                searchRequest,
-                listener,
-                shardIterators,
-                timeProvider,
-                task,
-                (iter) -> {
-                    SearchPhase action = searchAsyncAction(
-                        task,
-                        searchRequest,
-                        executor,
-                        iter,
-                        timeProvider,
-                        connectionLookup,
-                        clusterState,
-                        aliasFilter,
-                        concreteIndexBoosts,
-                        listener,
-                        false,
-                        threadPool,
-                        clusters
-                    );
-                    assert action instanceof AbstractSearchAsyncAction;
-                    return action;
-                },
-                clusters,
-                searchService.getCoordinatorRewriteContextProvider(timeProvider::getAbsoluteStartMillis)
-            );
-        } else {
-            final QueryPhaseResultConsumer queryResultConsumer = searchPhaseController.newSearchPhaseResults(
-                executor,
-                circuitBreaker,
-                task::isCancelled,
-                task.getProgressListener(),
-                searchRequest,
-                shardIterators.size(),
-                exc -> searchTransportService.cancelSearchTask(task, "failed to merge result [" + exc.getMessage() + "]")
-            );
-            AbstractSearchAsyncAction<? extends SearchPhaseResult> searchAsyncAction;
-            switch (searchRequest.searchType()) {
-                case DFS_QUERY_THEN_FETCH:
-                    searchAsyncAction = new SearchDfsQueryThenFetchAsyncAction(
+    private class AsyncSearchActionProvider implements SearchPhaseProvider {
+        private final ActionListener<SearchResponse> listener;
+
+        AsyncSearchActionProvider(ActionListener<SearchResponse> listener) {
+            this.listener = listener;
+        }
+
+        @Override
+        public SearchPhase newSearchPhase(
+            SearchTask task,
+            SearchRequest searchRequest,
+            Executor executor,
+            GroupShardsIterator<SearchShardIterator> shardIterators,
+            SearchTimeProvider timeProvider,
+            BiFunction<String, String, Transport.Connection> connectionLookup,
+            ClusterState clusterState,
+            Map<String, AliasFilter> aliasFilter,
+            Map<String, Float> concreteIndexBoosts,
+            boolean preFilter,
+            ThreadPool threadPool,
+            SearchResponse.Clusters clusters
+        ) {
+            if (preFilter) {
+                return new CanMatchPreFilterSearchPhase(
+                    logger,
+                    searchTransportService,
+                    connectionLookup,
+                    aliasFilter,
+                    concreteIndexBoosts,
+                    threadPool.executor(ThreadPool.Names.SEARCH_COORDINATION),
+                    searchRequest,
+                    shardIterators,
+                    timeProvider,
+                    task,
+                    searchService.getCoordinatorRewriteContextProvider(timeProvider::absoluteStartMillis),
+                    ActionListener.wrap(iters -> {
+                        SearchPhase action = newSearchPhase(
+                            task,
+                            searchRequest,
+                            executor,
+                            iters,
+                            timeProvider,
+                            connectionLookup,
+                            clusterState,
+                            aliasFilter,
+                            concreteIndexBoosts,
+                            false,
+                            threadPool,
+                            clusters
+                        );
+                        action.start();
+                    }, listener::onFailure)
+                );
+            } else {
+                final QueryPhaseResultConsumer queryResultConsumer = searchPhaseController.newSearchPhaseResults(
+                    executor,
+                    circuitBreaker,
+                    task::isCancelled,
+                    task.getProgressListener(),
+                    searchRequest,
+                    shardIterators.size(),
+                    exc -> searchTransportService.cancelSearchTask(task, "failed to merge result [" + exc.getMessage() + "]")
+                );
+                if (searchRequest.searchType() == DFS_QUERY_THEN_FETCH) {
+                    return new SearchDfsQueryThenFetchAsyncAction(
                         logger,
                         searchTransportService,
                         connectionLookup,
                         aliasFilter,
                         concreteIndexBoosts,
-                        searchPhaseController,
                         executor,
                         queryResultConsumer,
                         searchRequest,
@@ -1209,15 +1121,14 @@ public class TransportSearchAction extends HandledTransportAction<SearchRequest,
                         task,
                         clusters
                     );
-                    break;
-                case QUERY_THEN_FETCH:
-                    searchAsyncAction = new SearchQueryThenFetchAsyncAction(
+                } else {
+                    assert searchRequest.searchType() == QUERY_THEN_FETCH : searchRequest.searchType();
+                    return new SearchQueryThenFetchAsyncAction(
                         logger,
                         searchTransportService,
                         connectionLookup,
                         aliasFilter,
                         concreteIndexBoosts,
-                        searchPhaseController,
                         executor,
                         queryResultConsumer,
                         searchRequest,
@@ -1228,11 +1139,8 @@ public class TransportSearchAction extends HandledTransportAction<SearchRequest,
                         task,
                         clusters
                     );
-                    break;
-                default:
-                    throw new IllegalStateException("Unknown search type: [" + searchRequest.searchType() + "]");
+                }
             }
-            return searchAsyncAction;
         }
     }
 
@@ -1243,7 +1151,7 @@ public class TransportSearchAction extends HandledTransportAction<SearchRequest,
         String[] concreteLocalIndices
     ) {
         HashSet<String> searchedIndices = new HashSet<>(Arrays.asList(concreteLocalIndices));
-        HashMap<String, long[]> newWaitForCheckpoints = new HashMap<>(searchRequest.getWaitForCheckpoints().size());
+        Map<String, long[]> newWaitForCheckpoints = Maps.newMapWithExpectedSize(searchRequest.getWaitForCheckpoints().size());
         for (Map.Entry<String, long[]> waitForCheckpointIndex : searchRequest.getWaitForCheckpoints().entrySet()) {
             long[] checkpoints = waitForCheckpointIndex.getValue();
             int checkpointsProvided = checkpoints.length;
@@ -1413,21 +1321,34 @@ public class TransportSearchAction extends HandledTransportAction<SearchRequest,
         OriginalIndices originalIndices,
         String localClusterAlias,
         SearchContextId searchContext,
-        TimeValue keepAlive
+        TimeValue keepAlive,
+        boolean allowPartialSearchResults
     ) {
         final List<SearchShardIterator> iterators = new ArrayList<>(searchContext.shards().size());
         for (Map.Entry<ShardId, SearchContextIdForNode> entry : searchContext.shards().entrySet()) {
             final SearchContextIdForNode perNode = entry.getValue();
             if (Strings.isEmpty(perNode.getClusterAlias())) {
                 final ShardId shardId = entry.getKey();
-                final ShardIterator shards = OperationRouting.getShards(clusterState, shardId);
-                final List<String> targetNodes = new ArrayList<>(shards.size());
-                targetNodes.add(perNode.getNode());
-                if (perNode.getSearchContextId().getSearcherId() != null) {
-                    for (ShardRouting shard : shards) {
-                        if (shard.currentNodeId().equals(perNode.getNode()) == false) {
-                            targetNodes.add(shard.currentNodeId());
+                final List<String> targetNodes = new ArrayList<>(2);
+                // Prefer executing shard requests on nodes that are part of PIT first.
+                if (clusterState.nodes().nodeExists(perNode.getNode())) {
+                    targetNodes.add(perNode.getNode());
+                }
+                try {
+                    final ShardIterator shards = OperationRouting.getShards(clusterState, shardId);
+                    if (perNode.getSearchContextId().getSearcherId() != null) {
+                        for (ShardRouting shard : shards) {
+                            if (shard.currentNodeId().equals(perNode.getNode()) == false) {
+                                targetNodes.add(shard.currentNodeId());
+                            }
                         }
+                    }
+                } catch (IndexNotFoundException | ShardNotFoundException e) {
+                    // We can hit these exceptions if the index was deleted after creating PIT or the cluster state on
+                    // this coordinating node is outdated. It's fine to ignore these extra "retry-able" target shards
+                    // when allowPartialSearchResults is false
+                    if (allowPartialSearchResults == false) {
+                        throw e;
                     }
                 }
                 OriginalIndices finalIndices = new OriginalIndices(
