@@ -11,12 +11,12 @@ package org.elasticsearch.cluster.coordination;
 import org.apache.logging.log4j.Level;
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
-import org.apache.logging.log4j.message.ParameterizedMessage;
 import org.elasticsearch.ElasticsearchException;
 import org.elasticsearch.action.ActionListener;
 import org.elasticsearch.cluster.ClusterState;
 import org.elasticsearch.cluster.coordination.ClusterStatePublisher.AckListener;
 import org.elasticsearch.cluster.node.DiscoveryNode;
+import org.elasticsearch.common.util.concurrent.ListenableFuture;
 import org.elasticsearch.core.TimeValue;
 import org.elasticsearch.transport.TransportException;
 import org.elasticsearch.transport.TransportResponse;
@@ -38,7 +38,7 @@ public abstract class Publication {
     private final LongSupplier currentTimeSupplier;
     private final long startTime;
 
-    private Optional<ApplyCommitRequest> applyCommitRequest; // set when state is committed
+    private Optional<ListenableFuture<ApplyCommitRequest>> applyCommitRequest; // set when state is committed
     private boolean isCompleted; // set when publication is completed
     private boolean cancelled; // set when publication is cancelled
 
@@ -87,7 +87,7 @@ public abstract class Publication {
         return publicationTargets.stream()
             .filter(PublicationTarget::isSuccessfullyCompleted)
             .map(PublicationTarget::getDiscoveryNode)
-            .collect(Collectors.toList());
+            .toList();
     }
 
     public boolean isCommitted() {
@@ -123,7 +123,7 @@ public abstract class Publication {
     }
 
     // For assertions only: verify that this invariant holds
-    private boolean publicationCompletedIffAllTargetsInactiveOrCancelled() {
+    boolean publicationCompletedIffAllTargetsInactiveOrCancelled() {
         if (cancelled == false) {
             for (final PublicationTarget target : publicationTargets) {
                 if (target.isActive()) {
@@ -174,7 +174,10 @@ public abstract class Publication {
 
     protected abstract boolean isPublishQuorum(CoordinationState.VoteCollection votes);
 
-    protected abstract Optional<ApplyCommitRequest> handlePublishResponse(DiscoveryNode sourceNode, PublishResponse publishResponse);
+    protected abstract Optional<ListenableFuture<ApplyCommitRequest>> handlePublishResponse(
+        DiscoveryNode sourceNode,
+        PublishResponse publishResponse
+    );
 
     protected abstract void onJoin(Join join);
 
@@ -191,6 +194,8 @@ public abstract class Publication {
         ApplyCommitRequest applyCommit,
         ActionListener<TransportResponse.Empty> responseActionListener
     );
+
+    protected abstract <T> ActionListener<T> wrapListener(ActionListener<T> listener);
 
     @Override
     public String toString() {
@@ -281,7 +286,19 @@ public abstract class Publication {
             assert state == PublicationTargetState.WAITING_FOR_QUORUM : state + " -> " + PublicationTargetState.SENT_APPLY_COMMIT;
             state = PublicationTargetState.SENT_APPLY_COMMIT;
             assert applyCommitRequest.isPresent();
-            Publication.this.sendApplyCommit(discoveryNode, applyCommitRequest.get(), new ApplyCommitResponseHandler());
+            applyCommitRequest.get().addListener(wrapListener(new ActionListener<>() {
+                @Override
+                public void onResponse(ApplyCommitRequest applyCommitRequest) {
+                    Publication.this.sendApplyCommit(discoveryNode, applyCommitRequest, new ApplyCommitResponseHandler());
+                    assert publicationCompletedIffAllTargetsInactiveOrCancelled();
+                }
+
+                @Override
+                public void onFailure(Exception e) {
+                    setFailed(e);
+                    onPossibleCommitFailure();
+                }
+            }));
             assert publicationCompletedIffAllTargetsInactiveOrCancelled();
         }
 
@@ -368,15 +385,24 @@ public abstract class Publication {
 
             @Override
             public void onFailure(Exception e) {
-                assert e instanceof TransportException;
-                final TransportException exp = (TransportException) e;
-                logger.debug(() -> new ParameterizedMessage("PublishResponseHandler: [{}] failed", discoveryNode), exp);
-                assert ((TransportException) e).getRootCause() instanceof Exception;
-                setFailed((Exception) exp.getRootCause());
+                logger.debug(() -> "PublishResponseHandler: [" + discoveryNode + "] failed", e);
+                setFailed(getRootCause(e));
                 onPossibleCommitFailure();
                 assert publicationCompletedIffAllTargetsInactiveOrCancelled();
             }
 
+        }
+
+        private Exception getRootCause(Exception e) {
+            if (e instanceof final TransportException transportException) {
+                if (transportException.getRootCause() instanceof final Exception rootCause) {
+                    return rootCause;
+                } else {
+                    assert false : e;
+                    logger.error(() -> "PublishResponseHandler: [" + discoveryNode + "] failed", e);
+                }
+            }
+            return e;
         }
 
         private class ApplyCommitResponseHandler implements ActionListener<TransportResponse.Empty> {
@@ -396,7 +422,7 @@ public abstract class Publication {
             public void onFailure(Exception e) {
                 assert e instanceof TransportException;
                 final TransportException exp = (TransportException) e;
-                logger.debug(() -> new ParameterizedMessage("ApplyCommitResponseHandler: [{}] failed", discoveryNode), exp);
+                logger.debug(() -> "ApplyCommitResponseHandler: [" + discoveryNode + "] failed", exp);
                 assert ((TransportException) e).getRootCause() instanceof Exception;
                 setFailed((Exception) exp.getRootCause());
                 onPossibleCompletion();
