@@ -32,10 +32,12 @@ import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Locale;
 import java.util.Map;
+import java.util.Objects;
 import java.util.function.BiConsumer;
-import java.util.stream.Collectors;
 
 import static org.elasticsearch.common.xcontent.support.XContentMapValues.nodeBooleanValue;
+import static org.elasticsearch.index.mapper.ObjectMapper.TypeParser.parseObjectOrDocumentTypeProperties;
+import static org.elasticsearch.index.mapper.ObjectMapper.TypeParser.parseSubobjects;
 import static org.elasticsearch.index.mapper.TypeParsers.parseDateTimeFormatter;
 
 public class RootObjectMapper extends ObjectMapper {
@@ -52,23 +54,27 @@ public class RootObjectMapper extends ObjectMapper {
     static final String TOXCONTENT_SKIP_RUNTIME = "skip_runtime";
 
     public static class Defaults {
-        public static final DateFormatter[] DYNAMIC_DATE_TIME_FORMATTERS = new DateFormatter[] {
-            DateFieldMapper.DEFAULT_DATE_TIME_FORMATTER,
-            DateFormatter.forPattern("yyyy/MM/dd HH:mm:ss||yyyy/MM/dd||epoch_millis") };
-        public static final boolean DATE_DETECTION = true;
-        public static final boolean NUMERIC_DETECTION = false;
+        public static final Explicit<DateFormatter[]> DYNAMIC_DATE_TIME_FORMATTERS = new Explicit<>(
+            new DateFormatter[] {
+                DateFieldMapper.DEFAULT_DATE_TIME_FORMATTER,
+                DateFormatter.forPattern("yyyy/MM/dd HH:mm:ss||yyyy/MM/dd||epoch_millis") },
+            false
+        );
+        public static final Explicit<Boolean> DATE_DETECTION = Explicit.IMPLICIT_TRUE;
+        public static final Explicit<Boolean> NUMERIC_DETECTION = Explicit.IMPLICIT_FALSE;
+        private static final Explicit<DynamicTemplate[]> DYNAMIC_TEMPLATES = new Explicit<>(new DynamicTemplate[0], false);
     }
 
     public static class Builder extends ObjectMapper.Builder {
+        protected Explicit<DynamicTemplate[]> dynamicTemplates = Defaults.DYNAMIC_TEMPLATES;
+        protected Explicit<DateFormatter[]> dynamicDateTimeFormatters = Defaults.DYNAMIC_DATE_TIME_FORMATTERS;
 
-        protected Explicit<DynamicTemplate[]> dynamicTemplates = new Explicit<>(new DynamicTemplate[0], false);
-        protected Explicit<DateFormatter[]> dynamicDateTimeFormatters = new Explicit<>(Defaults.DYNAMIC_DATE_TIME_FORMATTERS, false);
-        protected Explicit<Boolean> dateDetection = new Explicit<>(Defaults.DATE_DETECTION, false);
-        protected Explicit<Boolean> numericDetection = new Explicit<>(Defaults.NUMERIC_DETECTION, false);
-        protected Map<String, RuntimeField> runtimeFields;
+        protected final Map<String, RuntimeField> runtimeFields = new HashMap<>();
+        protected Explicit<Boolean> dateDetection = Defaults.DATE_DETECTION;
+        protected Explicit<Boolean> numericDetection = Defaults.NUMERIC_DETECTION;
 
-        public Builder(String name) {
-            super(name);
+        public Builder(String name, Explicit<Boolean> subobjects) {
+            super(name, subobjects);
         }
 
         public Builder dynamicDateTimeFormatter(Collection<DateFormatter> dateTimeFormatters) {
@@ -87,8 +93,13 @@ public class RootObjectMapper extends ObjectMapper {
             return this;
         }
 
-        public RootObjectMapper.Builder setRuntime(Map<String, RuntimeField> runtimeFields) {
-            this.runtimeFields = runtimeFields;
+        public RootObjectMapper.Builder addRuntimeField(RuntimeField runtimeField) {
+            this.runtimeFields.put(runtimeField.name(), runtimeField);
+            return this;
+        }
+
+        public RootObjectMapper.Builder addRuntimeFields(Map<String, RuntimeField> runtimeFields) {
+            this.runtimeFields.putAll(runtimeFields);
             return this;
         }
 
@@ -97,141 +108,15 @@ public class RootObjectMapper extends ObjectMapper {
             return new RootObjectMapper(
                 name,
                 enabled,
+                subobjects,
                 dynamic,
-                buildMappers(true, context),
-                runtimeFields == null ? Collections.emptyMap() : runtimeFields,
+                buildMappers(context),
+                runtimeFields,
                 dynamicDateTimeFormatters,
                 dynamicTemplates,
                 dateDetection,
                 numericDetection
             );
-        }
-    }
-
-    /**
-     * Removes redundant root includes in {@link NestedObjectMapper} trees to avoid duplicate
-     * fields on the root mapper when {@code isIncludeInRoot} is {@code true} for a node that is
-     * itself included into a parent node, for which either {@code isIncludeInRoot} is
-     * {@code true} or which is transitively included in root by a chain of nodes with
-     * {@code isIncludeInParent} returning {@code true}.
-     */
-    // TODO it would be really nice to make this an implementation detail of NestedObjectMapper
-    // and run it as part of the builder, but this does not yet work because of the way that
-    // index templates are merged together. If merge() was run on Builder objects rather than
-    // on Mappers then we could move this.
-    public void fixRedundantIncludes() {
-        fixRedundantIncludes(this, true);
-    }
-
-    private static void fixRedundantIncludes(ObjectMapper objectMapper, boolean parentIncluded) {
-        for (Mapper mapper : objectMapper) {
-            if (mapper instanceof NestedObjectMapper) {
-                NestedObjectMapper child = (NestedObjectMapper) mapper;
-                boolean isNested = child.isNested();
-                boolean includeInRootViaParent = parentIncluded && isNested && child.isIncludeInParent();
-                boolean includedInRoot = isNested && child.isIncludeInRoot();
-                if (includeInRootViaParent && includedInRoot) {
-                    child.setIncludeInParent(true);
-                    child.setIncludeInRoot(false);
-                }
-                fixRedundantIncludes(child, includeInRootViaParent || includedInRoot);
-            }
-        }
-    }
-
-    static final class TypeParser extends ObjectMapper.TypeParser {
-
-        @Override
-        public RootObjectMapper.Builder parse(String name, Map<String, Object> node, MappingParserContext parserContext)
-            throws MapperParsingException {
-            RootObjectMapper.Builder builder = new Builder(name);
-            Iterator<Map.Entry<String, Object>> iterator = node.entrySet().iterator();
-            while (iterator.hasNext()) {
-                Map.Entry<String, Object> entry = iterator.next();
-                String fieldName = entry.getKey();
-                Object fieldNode = entry.getValue();
-                if (parseObjectOrDocumentTypeProperties(fieldName, fieldNode, parserContext, builder)
-                    || processField(builder, fieldName, fieldNode, parserContext)) {
-                    iterator.remove();
-                }
-            }
-            return builder;
-        }
-
-        @SuppressWarnings("unchecked")
-        private boolean processField(
-            RootObjectMapper.Builder builder,
-            String fieldName,
-            Object fieldNode,
-            MappingParserContext parserContext
-        ) {
-            if (fieldName.equals("date_formats") || fieldName.equals("dynamic_date_formats")) {
-                if (fieldNode instanceof List) {
-                    List<DateFormatter> formatters = new ArrayList<>();
-                    for (Object formatter : (List<?>) fieldNode) {
-                        if (formatter.toString().startsWith("epoch_")) {
-                            throw new MapperParsingException("Epoch [" + formatter + "] is not supported as dynamic date format");
-                        }
-                        formatters.add(parseDateTimeFormatter(formatter));
-                    }
-                    builder.dynamicDateTimeFormatter(formatters);
-                } else if ("none".equals(fieldNode.toString())) {
-                    builder.dynamicDateTimeFormatter(Collections.emptyList());
-                } else {
-                    builder.dynamicDateTimeFormatter(Collections.singleton(parseDateTimeFormatter(fieldNode)));
-                }
-                return true;
-            } else if (fieldName.equals("dynamic_templates")) {
-                /*
-                  "dynamic_templates" : [
-                      {
-                          "template_1" : {
-                              "match" : "*_test",
-                              "match_mapping_type" : "string",
-                              "mapping" : { "type" : "keyword", "store" : "yes" }
-                          }
-                      }
-                  ]
-                */
-                if ((fieldNode instanceof List) == false) {
-                    throw new MapperParsingException("Dynamic template syntax error. An array of named objects is expected.");
-                }
-                List<?> tmplNodes = (List<?>) fieldNode;
-                List<DynamicTemplate> templates = new ArrayList<>();
-                for (Object tmplNode : tmplNodes) {
-                    Map<String, Object> tmpl = (Map<String, Object>) tmplNode;
-                    if (tmpl.size() != 1) {
-                        throw new MapperParsingException("A dynamic template must be defined with a name");
-                    }
-                    Map.Entry<String, Object> entry = tmpl.entrySet().iterator().next();
-                    String templateName = entry.getKey();
-                    Map<String, Object> templateParams = (Map<String, Object>) entry.getValue();
-                    DynamicTemplate template = DynamicTemplate.parse(templateName, templateParams);
-                    validateDynamicTemplate(parserContext, template);
-                    templates.add(template);
-                }
-                builder.dynamicTemplates(templates);
-                return true;
-            } else if (fieldName.equals("date_detection")) {
-                builder.dateDetection = new Explicit<>(nodeBooleanValue(fieldNode, "date_detection"), true);
-                return true;
-            } else if (fieldName.equals("numeric_detection")) {
-                builder.numericDetection = new Explicit<>(nodeBooleanValue(fieldNode, "numeric_detection"), true);
-                return true;
-            } else if (fieldName.equals("runtime")) {
-                if (fieldNode instanceof Map) {
-                    Map<String, RuntimeField> fields = RuntimeField.parseRuntimeFields(
-                        (Map<String, Object>) fieldNode,
-                        parserContext,
-                        true
-                    );
-                    builder.setRuntime(fields);
-                    return true;
-                } else {
-                    throw new ElasticsearchParseException("runtime must be a map type");
-                }
-            }
-            return false;
         }
     }
 
@@ -244,6 +129,7 @@ public class RootObjectMapper extends ObjectMapper {
     RootObjectMapper(
         String name,
         Explicit<Boolean> enabled,
+        Explicit<Boolean> subobjects,
         Dynamic dynamic,
         Map<String, Mapper> mappers,
         Map<String, RuntimeField> runtimeFields,
@@ -252,7 +138,7 @@ public class RootObjectMapper extends ObjectMapper {
         Explicit<Boolean> dateDetection,
         Explicit<Boolean> numericDetection
     ) {
-        super(name, name, enabled, dynamic, mappers);
+        super(name, name, enabled, subobjects, dynamic, mappers);
         this.runtimeFields = runtimeFields;
         this.dynamicTemplates = dynamicTemplates;
         this.dynamicDateTimeFormatters = dynamicDateTimeFormatters;
@@ -268,18 +154,11 @@ public class RootObjectMapper extends ObjectMapper {
     }
 
     @Override
-    RootObjectMapper copyAndReset() {
-        RootObjectMapper copy = (RootObjectMapper) super.copyAndReset();
-        // for dynamic updates, no need to carry root-specific options, we just
-        // set everything to their implicit default value so that they are not
-        // applied at merge time
-        copy.dynamicTemplates = new Explicit<>(new DynamicTemplate[0], false);
-        copy.dynamicDateTimeFormatters = new Explicit<>(Defaults.DYNAMIC_DATE_TIME_FORMATTERS, false);
-        copy.dateDetection = new Explicit<>(Defaults.DATE_DETECTION, false);
-        copy.numericDetection = new Explicit<>(Defaults.NUMERIC_DETECTION, false);
-        // also no need to carry the already defined runtime fields, only new ones need to be added
-        copy.runtimeFields.clear();
-        return copy;
+    public RootObjectMapper.Builder newBuilder(Version indexVersionCreated) {
+        RootObjectMapper.Builder builder = new RootObjectMapper.Builder(name(), subobjects);
+        builder.enabled = enabled;
+        builder.dynamic = dynamic;
+        return builder;
     }
 
     /**
@@ -319,13 +198,19 @@ public class RootObjectMapper extends ObjectMapper {
     }
 
     @Override
-    public RootObjectMapper merge(Mapper mergeWith, MergeReason reason) {
-        return (RootObjectMapper) super.merge(mergeWith, reason);
+    protected MapperBuilderContext createChildContext(MapperBuilderContext mapperBuilderContext, String name) {
+        assert Objects.equals(mapperBuilderContext.buildFullName("foo"), "foo");
+        return mapperBuilderContext;
     }
 
     @Override
-    protected void doMerge(ObjectMapper mergeWith, MergeReason reason) {
-        super.doMerge(mergeWith, reason);
+    public RootObjectMapper merge(Mapper mergeWith, MergeReason reason, MapperBuilderContext parentBuilderContext) {
+        return (RootObjectMapper) super.merge(mergeWith, reason, parentBuilderContext);
+    }
+
+    @Override
+    protected void doMerge(ObjectMapper mergeWith, MergeReason reason, MapperBuilderContext parentBuilderContext) {
+        super.doMerge(mergeWith, reason, parentBuilderContext);
         RootObjectMapper mergeWithObject = (RootObjectMapper) mergeWith;
         if (mergeWithObject.numericDetection.explicit()) {
             this.numericDetection = mergeWithObject.numericDetection;
@@ -365,12 +250,6 @@ public class RootObjectMapper extends ObjectMapper {
         }
     }
 
-    void addRuntimeFields(Collection<RuntimeField> runtimeFields) {
-        for (RuntimeField runtimeField : runtimeFields) {
-            this.runtimeFields.put(runtimeField.name(), runtimeField);
-        }
-    }
-
     @Override
     protected void doXContent(XContentBuilder builder, ToXContent.Params params) throws IOException {
         final boolean includeDefaults = params.paramAsBoolean("include_defaults", false);
@@ -405,7 +284,7 @@ public class RootObjectMapper extends ObjectMapper {
             List<RuntimeField> sortedRuntimeFields = runtimeFields.values()
                 .stream()
                 .sorted(Comparator.comparing(RuntimeField::name))
-                .collect(Collectors.toList());
+                .toList();
             for (RuntimeField fieldType : sortedRuntimeFields) {
                 fieldType.toXContent(builder, params);
             }
@@ -442,7 +321,7 @@ public class RootObjectMapper extends ObjectMapper {
                     validate(
                         template,
                         dynamicType,
-                        (name, mapping) -> typeParser.parse(name, mapping, parserContext).build(MapperBuilderContext.ROOT)
+                        (name, mapping) -> typeParser.parse(name, mapping, parserContext).build(MapperBuilderContext.root(false))
                     );
                 }
                 lastError = null; // ok, the template is valid for at least one type
@@ -511,6 +390,100 @@ public class RootObjectMapper extends ObjectMapper {
             return containsSnippet((List<?>) value, snippet);
         } else if (value instanceof String) {
             return ((String) value).contains(snippet);
+        }
+        return false;
+    }
+
+    @Override
+    protected void startSyntheticField(XContentBuilder b) throws IOException {
+        b.startObject();
+    }
+
+    public static RootObjectMapper.Builder parse(String name, Map<String, Object> node, MappingParserContext parserContext)
+        throws MapperParsingException {
+        Explicit<Boolean> subobjects = parseSubobjects(node);
+        RootObjectMapper.Builder builder = new Builder(name, subobjects);
+        Iterator<Map.Entry<String, Object>> iterator = node.entrySet().iterator();
+        while (iterator.hasNext()) {
+            Map.Entry<String, Object> entry = iterator.next();
+            String fieldName = entry.getKey();
+            Object fieldNode = entry.getValue();
+            if (parseObjectOrDocumentTypeProperties(fieldName, fieldNode, parserContext, builder)
+                || processField(builder, fieldName, fieldNode, parserContext)) {
+                iterator.remove();
+            }
+        }
+        return builder;
+    }
+
+    @SuppressWarnings("unchecked")
+    private static boolean processField(
+        RootObjectMapper.Builder builder,
+        String fieldName,
+        Object fieldNode,
+        MappingParserContext parserContext
+    ) {
+        if (fieldName.equals("date_formats") || fieldName.equals("dynamic_date_formats")) {
+            if (fieldNode instanceof List) {
+                List<DateFormatter> formatters = new ArrayList<>();
+                for (Object formatter : (List<?>) fieldNode) {
+                    if (formatter.toString().startsWith("epoch_")) {
+                        throw new MapperParsingException("Epoch [" + formatter + "] is not supported as dynamic date format");
+                    }
+                    formatters.add(parseDateTimeFormatter(formatter));
+                }
+                builder.dynamicDateTimeFormatter(formatters);
+            } else if ("none".equals(fieldNode.toString())) {
+                builder.dynamicDateTimeFormatter(Collections.emptyList());
+            } else {
+                builder.dynamicDateTimeFormatter(Collections.singleton(parseDateTimeFormatter(fieldNode)));
+            }
+            return true;
+        } else if (fieldName.equals("dynamic_templates")) {
+            /*
+              "dynamic_templates" : [
+                  {
+                      "template_1" : {
+                          "match" : "*_test",
+                          "match_mapping_type" : "string",
+                          "mapping" : { "type" : "keyword", "store" : "yes" }
+                      }
+                  }
+              ]
+            */
+            if ((fieldNode instanceof List) == false) {
+                throw new MapperParsingException("Dynamic template syntax error. An array of named objects is expected.");
+            }
+            List<?> tmplNodes = (List<?>) fieldNode;
+            List<DynamicTemplate> templates = new ArrayList<>();
+            for (Object tmplNode : tmplNodes) {
+                Map<String, Object> tmpl = (Map<String, Object>) tmplNode;
+                if (tmpl.size() != 1) {
+                    throw new MapperParsingException("A dynamic template must be defined with a name");
+                }
+                Map.Entry<String, Object> entry = tmpl.entrySet().iterator().next();
+                String templateName = entry.getKey();
+                Map<String, Object> templateParams = (Map<String, Object>) entry.getValue();
+                DynamicTemplate template = DynamicTemplate.parse(templateName, templateParams);
+                validateDynamicTemplate(parserContext, template);
+                templates.add(template);
+            }
+            builder.dynamicTemplates(templates);
+            return true;
+        } else if (fieldName.equals("date_detection")) {
+            builder.dateDetection = Explicit.explicitBoolean(nodeBooleanValue(fieldNode, "date_detection"));
+            return true;
+        } else if (fieldName.equals("numeric_detection")) {
+            builder.numericDetection = Explicit.explicitBoolean(nodeBooleanValue(fieldNode, "numeric_detection"));
+            return true;
+        } else if (fieldName.equals("runtime")) {
+            if (fieldNode instanceof Map) {
+                Map<String, RuntimeField> fields = RuntimeField.parseRuntimeFields((Map<String, Object>) fieldNode, parserContext, true);
+                builder.addRuntimeFields(fields);
+                return true;
+            } else {
+                throw new ElasticsearchParseException("runtime must be a map type");
+            }
         }
         return false;
     }
